--- a/src/app/admin/components/single-classroom/single-classroom.component.html
+++ b/src/app/admin/components/single-classroom/single-classroom.component.html
@@ -1,87 +1,86 @@
-<!-- single-classroom.component.html -->
-<div *ngIf="classroomData">
-  <h1>Salle de classe: {{ classroomData.name }}</h1>
-  <p>Capacité: {{ classroomData.capacity }}</p>
+<div class="container">
 
-  <button class="w3-button w3-blue w3-round" (click)="goBack()">
-    <i class="pi pi-arrow-left"></i> Retour
-  </button>
-
-  <button class="w3-button w3-green w3-round" (click)="openEquipmentDialog()">
-    <i class="pi pi-plus"></i> Ajouter un équipement
-  </button>
-
-  <div
-    *ngIf="
-      classroomData.materials && classroomData.materials.length > 0;
-      else noEquipments
-    "
-  >
-    <div class="card">
-      <p-table
-        [value]="classroomData.materials"
-        [paginator]="true"
-        [rows]="5"
-        [showCurrentPageReport]="true"
-        [tableStyle]="{ 'min-width': '50rem' }"
-        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-        [rowsPerPageOptions]="[10, 25, 50]"
-      >
-        <ng-template pTemplate="header">
-          <tr>
-            <th style="width: 25%">Id</th>
-            <th style="width: 25%">Équipement</th>
-            <th style="width: 25%">Quantité</th>
-            <th style="width: 25%">Actions</th>
-          </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-material let-i="rowIndex">
-          <tr>
-            <td>{{ material.id }}</td>
-            <td>{{ material.equipment }}</td>
-            <td>
-              <div *ngIf="editingIndex !== i">
-                {{ material.quantity }}
-                <button
-                  class="w3-button w3-blue w3-round"
-                  (click)="startEdit(i, material)"
-                >
-                  <i class="pi pi-pencil"></i>
-                </button>
-              </div>
-              <div *ngIf="editingIndex === i">
-                <input type="number" [(ngModel)]="editingQuantity" min="1" />
-                <button
-                  class="w3-button w3-green w3-round"
-                  (click)="updateQuantity(material.id)"
-                >
-                  <i class="pi pi-check"></i>
-                </button>
-                <button
-                  class="w3-button w3-red w3-round"
-                  (click)="cancelEdit()"
-                >
-                  <i class="pi pi-times"></i>
-                </button>
-              </div>
-            </td>
-            <td>
-              <button
-                class="w3-button w3-red w3-round"
-                (click)="confirmDelete(material.id)"
-              >
-                <i class="pi pi-trash"></i> Supprimer
-              </button>
-            </td>
-          </tr>
-        </ng-template>
-      </p-table>
+  <div class="flex align-items-center border-round p-4 relative" style="background-color: rgb(239, 244, 255)">
+    <div>
+      <h1 class="text-2xl font-semibold">Gestion des salles de classe</h1>
+      <p class="text-900 -mt-2">Créer, gérer les équipements ou supprimer des salles de classe.</p>
+    </div>
+    <div class="absolute hidden sm:hidden md:block" style="top: -14px; right: 50px;">
+      <img src="/assets/images/3dicons/cube.png" alt="cube" width="180px">
     </div>
   </div>
 
-  <ng-template #noEquipments>
-    <p>Aucun équipement ajouté à cette salle de classe.</p>
-  </ng-template>
+  <div class="mt-6 -ml-3">
+    <p-button label="Retour" [text]="true" icon="pi pi-arrow-left" (click)="goBack()"></p-button>
+  </div>
+
+  <div class="border-round mt-3 p-4 pt-3 pb-3" style="background-color: rgb(255, 247, 234)">
+    <h1 class="text-2xl font-semibold">{{ classroomData.name }}</h1>
+    <p>Capacité : {{ classroomData.capacity }}</p>
+  </div>
+
+  <div class="shadow-1 border-round mt-5 p-4 pt-2">
+    <h1 class="text-lg font-medium">Équipements</h1>
+    <div class="flex justify-content-between mt-5 mb-4">
+      <div>
+        <span class="p-input-icon-left">
+          <i class="pi pi-search mb-3"></i>
+          <input pInputText type="text" #searchInput placeholder="Rechercher un équipement" />
+        </span>
+      </div>
+
+      <p-button icon="pi pi-plus" label="Ajouter un équipement" (click)="openEquipmentDialog()"></p-button>
+    </div>
+
+    <p-table [value]="classroomData.materials" [paginator]="true" [rows]="10" [showCurrentPageReport]="true"
+      [tableStyle]="{ 'min-width': '50rem' }"
+      currentPageReportTemplate="Affichage des entrées {first} à {last} sur {totalRecords} équipements"
+      [rowsPerPageOptions]="[5, 10, 20, 50]">
+      <ng-template pTemplate="header">
+        <tr>
+          <th>Nom de l'équipement</th>
+          <th>Quantité</th>
+          <th></th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-material let-i="rowIndex">
+        <tr>
+          <td>{{ material.equipment }}</td>
+          <td>
+            <div>
+              <div class="flex align-items-center" *ngIf="editingIndex !== i">
+                <div>
+                  {{ material.quantity }}
+                </div>
+                <div>
+                  <button pButton pRipple pTooltip="Modifier" tooltipPosition="top" type="button" icon="pi pi-pencil"
+                    class="p-button-rounded p-button-text" (click)="startEdit(i, material)"></button>
+                </div>
+              </div>
+            </div>
+            <div *ngIf="editingIndex === i">
+              <input pInputText class="w-3" type="number" [(ngModel)]="editingQuantity" min="1" />
+              <button pButton pRipple pTooltip="Sauvegarder" tooltipPosition="top" type="button" icon="pi pi-check"
+                class="ml-2 p-button-rounded p-button-text p-button-success"
+                (click)="updateQuantity(material.id)"></button>
+              <button pButton pRipple pTooltip="Annuler" tooltipPosition="top" icon="pi pi-times"
+                class="p-button-rounded p-button-text p-button-danger" (click)="cancelEdit()"></button>
+            </div>
+          </td>
+          <td>
+            <button pButton pRipple pTooltip="Supprimer" tooltipPosition="top" icon="pi pi-trash"
+              class="p-button-rounded p-button-text p-button-danger" (click)="confirmDelete(material.id)"></button>
+          </td>
+        </tr>
+      </ng-template>
+
+      <ng-template pTemplate="emptymessage">
+        <tr>
+          <td colspan="4">Aucun équipement dans cette salle de classe.</td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
 </div>
 
 <p-toast></p-toast>
