--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -148,7 +148,7 @@
                   <a pRipple
                     class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
                     routerLinkActive="active-navlink">
-                    <i class="pi pi-folder mr-2" routerLinkActive="active-navlink"></i>
+                    <i class="pi pi-compass mr-2" routerLinkActive="active-navlink"></i>
                     <span class="font-medium text-sm" routerLinkActive="active-navlink">Formations</span>
                   </a>
                 </li>
@@ -164,7 +164,7 @@
                   <a pRipple
                     class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
                     routerLinkActive="active-navlink">
-                    <i class="pi pi-folder mr-2" routerLinkActive="active-navlink"></i>
+                    <i class="pi pi-box mr-2" routerLinkActive="active-navlink"></i>
                     <span class="font-medium text-sm" routerLinkActive="active-navlink">Salles de classe</span>
                   </a>
                 </li>
@@ -172,7 +172,7 @@
                   <a pRipple
                     class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
                     routerLinkActive="active-navlink">
-                    <i class="pi pi-box mr-2" routerLinkActive="active-navlink"></i>
+                    <i class="pi pi-desktop mr-2" routerLinkActive="active-navlink"></i>
                     <span class="font-medium text-sm" routerLinkActive="active-navlink">Équipements</span>
                   </a>
                 </li>
