--- a/src/app/admin/components/classroom-equipment-dialog/classroom-equipment-dialog.component.html
+++ b/src/app/admin/components/classroom-equipment-dialog/classroom-equipment-dialog.component.html
@@ -1,40 +1,29 @@
 <div *ngIf="availableEquipments.length === 0" class="equipment-selection">
-  <p>Aucun équipement à rajouter dans cette salle</p>
+  <p>Aucun autre équipement à ajouter.</p>
 
 </div>
 
 <div *ngIf="availableEquipments.length > 0" class="equipment-selection">
-  <h3>Sélectionnez l'équipement à ajouter</h3>
 
   <!-- Champ de recherche -->
-  <input
-    type="text"
-    placeholder="Rechercher un équipement..."
-    [(ngModel)]="searchTerm"
-    (input)="filterEquipments()"
-    class="search-bar"
-  />
+  <input pInputText type="text" placeholder="Rechercher un équipement" [(ngModel)]="searchTerm"
+    (input)="filterEquipments()" class="w-full mt-2" />
 
   <ul class="equipment-list">
     <li *ngFor="let equipment of filteredEquipments">
       <label>
-        <input
-          type="radio"
-          name="equipment"
-          (click)="selectedEquipment = equipment"
-        />
+        <input type="radio" name="equipment" (click)="selectedEquipment = equipment" />
         {{ equipment.equipment }}
       </label>
     </li>
   </ul>
   <div class="quantity-input">
-    <label for="quantity">Quantité :</label>
-    <input id="quantity" type="number" [(ngModel)]="selectedQuantity" min="1" />
+    <label for="quantity" class="font-medium text-900">Quantité</label>
+    <input pInputText id="quantity" type="number" [(ngModel)]="selectedQuantity" min="1" />
   </div>
-  <button
-    class="w3-btn w3-blue w3-block w3-round-xlarge"
-    (click)="chooseEquipment()"
-  >
-    Ajouter à la salle de classe
-  </button>
+
+  <div class="flex justify-content-end gap-2">
+    <p-button label="Annuler" [outlined]="true" severity="secondary"></p-button>
+    <p-button type="button" label="Ajouter" (click)="chooseEquipment()" class="p-button-primary"></p-button>
+  </div>
 </div>
