--- a/src/app/admin/components/form/add-students-csv/add-students-csv.component.html
+++ b/src/app/admin/components/form/add-students-csv/add-students-csv.component.html
@@ -61,3 +61,41 @@
         </ng-template>
     </p-table>
 </div>
+
+
+
+
+<p-dialog [(visible)]="displayModalPassword" [modal]="true" [style]="{ width: '50vw' }" [draggable]="false" [resizable]="false" [contentStyle]="{ 'text-align': 'center' }">
+    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100%;">
+      <div style="margin-top: 2%">
+        <p><i class="pi pi-exclamation-triangle" style="font-size: 2rem"></i>Veuillez à bien sauvegarder les mots de passe, ils ne seront pas récupérable</p>
+        <!------->
+        <div class="card">
+            <p-table #dt [columns]="cols" [value]="allPassword" selectionMode="multiple"  [exportHeader]="'customExportHeader'" [tableStyle]="{ 'min-width': '50rem' }">
+                <ng-template pTemplate="caption">
+                    <div class="flex">
+                        <button type="button" pButton pRipple icon="pi pi-file-pdf" (click)="exportPdf()" class="p-button-success mr-2" pTooltip="PDF" tooltipPosition="bottom"></button>
+                        <p>Sauvegarder en PDF</p>
+                    </div>
+                </ng-template>
+                <ng-template pTemplate="header" let-columns>
+                    <tr>
+                        <th *ngFor="let col of columns">
+                            {{ col.header }}
+                        </th>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-rowData let-columns="columns">
+                    <tr [pSelectableRow]="rowData">
+                        <td *ngFor="let col of columns">
+                            {{ rowData[col.field] }}
+                        </td>
+                    </tr>
+                </ng-template>
+            </p-table>
+        </div>
+        <!-------><!------->
+        <p-button label="Valider" routerLink="/admin/students" [rounded]="true" severity="primary" icon="pi pi-check" [style]="{ 'margin-right.px': 10 }" click="closeModalPassword()"></p-button>
+      </div>
+    </div>
+</p-dialog>
