--- a/src/app/timetable/components/timetable-layout/timetable-layout.component.html
+++ b/src/app/timetable/components/timetable-layout/timetable-layout.component.html
@@ -57,8 +57,8 @@
             [locale]="locale" [viewDays]="viewDays" [weekStartsOn]="weekStartsOn" [excludeDays]="excludeDays"
             [startsWithToday]="startsWithToday" [hourSegments]="2" [dayStartHour]="dayStartHour"
             [dayEndHour]="dayEndHour" [dayModifier]="dayModifier" [hourModifier]="hourModifier"
-            [segmentModifier]="segmentModifier" [eventModifier]="eventModifier" [showEventActions]="true"
-            [showSegmentHour]="true" [zoomEventOnHover]="true" (dayHeaderClicked)="dayHeaderClicked($event.day)"
+            [segmentModifier]="segmentModifier" [eventModifier]="eventModifier" [showEventActions]="false"
+            [showSegmentHour]="false" [zoomEventOnHover]="false" (dayHeaderClicked)="dayHeaderClicked($event.day)"
             (hourClicked)="hourClicked($event.hour)" (segmentClicked)="segmentClicked('Clicked', $event.segment)"
             (eventClicked)="eventClicked('Clicked', $event.event)" (eventTimesChanged)="eventTimesChanged($event)"
             [refresh]="refresh">
