Modal de notification

--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -257,12 +257,14 @@
             <span class="block lg:hidden font-medium text-sm">Messagerie</span>
           </a>
         </li>
-        <li>
+        <li class="relative">
           <a pRipple
-            class="flex p-3 lg:px-3 lg:py-2 align-items-center text-600 hover:text-900 hover:surface-100 font-medium border-round cursor-pointer transition-duration-150 transition-colors">
+            class="notificationToggle flex p-3 lg:px-3 lg:py-2 align-items-center text-600 hover:text-900 hover:surface-100 font-medium border-round cursor-pointer transition-duration-150 transition-colors"
+            (click)="toggleNotifications()">
             <i class="pi pi-bell text-base lg:text-xl mr-2 lg:mr-0" pBadge severity="danger"></i>
             <span class="block lg:hidden font-medium text-sm">Notifications</span>
           </a>
+          <app-notifications-modal *ngIf="showNotifications" [@fade]></app-notifications-modal>
         </li>
         <li class="border-top-1 surface-border lg:border-top-none">
           <a pRipple
