--- a/src/app/core/components/notifications-modal/notifications-modal.component.html
+++ b/src/app/core/components/notifications-modal/notifications-modal.component.html
@@ -19,25 +19,27 @@
 
     <!-- Liste des notifications -->
     <div class="nt-content">
-
         <!-- Afficher si aucune notification -->
-        <div class="text-center">
+        <div *ngIf="notifications.length === 0" class="text-center">
             <p>Aucune notification.</p>
         </div>
 
-        <!-- Notification -->
-        <div class="nt-single border-round p-2 pt-1 nt-new flex align-items-center gap-4" routerLink="/absences">
-            <div>
-                <i class="pi pi-clock text-red-500" style="font-size: 21px;"></i>
-            </div>
-            <div>
-                <div class="flex justify-content-between align-items-center">
-                    <h1 class="text-sm">Absences</h1>
+        <!-- Itérer sur chaque notification -->
+        <ng-container *ngFor="let notification of notifications">
+            <div class="nt-single border-round p-2 pt-1 nt-new flex align-items-center gap-4" routerLink="/absences">
+                <div>
+                    <i class="pi {{ notification.icon_color }}" [ngClass]="notification.icon"
+                        style="font-size: 21px;"></i>
                 </div>
-                <p class="text-sm -mt-1">Vous avez été absent en Qualité Algo. le 04/12/2023 de 09h00 à 11h00.</p>
-                <span class="text-xs">Il y a une minute</span>
+                <div>
+                    <div class="flex justify-content-between align-items-center">
+                        <h1 class="text-sm">{{ notification.title }}</h1>
+                    </div>
+                    <p class="text-sm -mt-1">{{ notification.content }}</p>
+                    <span class="text-xs">{{ formatRelativeDate(notification.created_at) }}</span>
+                </div>
             </div>
-        </div>
+        </ng-container>
 
     </div>
 
