--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -261,7 +261,8 @@
           <a pRipple
             class="notificationToggle flex p-3 lg:px-3 lg:py-2 align-items-center text-600 hover:text-900 hover:surface-100 font-medium border-round cursor-pointer transition-duration-150 transition-colors"
             (click)="toggleNotifications()">
-            <i class="pi pi-bell text-base lg:text-xl mr-2 lg:mr-0" pBadge severity="danger"></i>
+            <i class="pi pi-bell text-base lg:text-xl mr-2 lg:mr-0"><p-badge *ngIf="totalUnread > 0"
+                severity="danger"></p-badge></i>
             <span class="block lg:hidden font-medium text-sm">Notifications</span>
           </a>
           <app-notifications-modal *ngIf="showNotifications" [@fade]></app-notifications-modal>
