--- a/src/app/core/components/notifications-modal/notifications-modal.component.html
+++ b/src/app/core/components/notifications-modal/notifications-modal.component.html
@@ -19,26 +19,32 @@
 
     <!-- Liste des notifications -->
     <div class="nt-content">
+
         <!-- Afficher si aucune notification -->
-        <div *ngIf="notifications.length === 0" class="text-center">
-            <p>Aucune notification.</p>
-        </div>
+        <ng-container *ngIf="!isLoading else singleSkeleton;">
+            <div *ngIf="notifications.length === 0" class="text-center">
+                <p>Aucune notification.</p>
+            </div>
+        </ng-container>
 
         <!-- Itérer sur chaque notification -->
-        <ng-container *ngFor="let notification of notifications">
-            <div class="nt-single border-round p-2 pt-1 nt-new flex align-items-center gap-4" routerLink="/absences">
-                <div>
-                    <i class="pi {{ notification.icon_color }}" [ngClass]="notification.icon"
-                        style="font-size: 21px;"></i>
-                </div>
-                <div>
-                    <div class="flex justify-content-between align-items-center">
-                        <h1 class="text-sm">{{ notification.title }}</h1>
+        <ng-container *ngIf="!isLoading;">
+            <ng-container *ngFor="let notification of notifications">
+                <div class="nt-single border-round p-2 pt-1 nt-new flex align-items-center gap-4"
+                    routerLink="/absences">
+                    <div>
+                        <i class="pi {{ notification.icon_color }}" [ngClass]="notification.icon"
+                            style="font-size: 21px;"></i>
                     </div>
-                    <p class="text-sm -mt-1">{{ notification.content }}</p>
-                    <span class="text-xs">{{ formatRelativeDate(notification.created_at) }}</span>
+                    <div>
+                        <div class="flex justify-content-between align-items-center">
+                            <h1 class="text-sm">{{ notification.title }}</h1>
+                        </div>
+                        <p class="text-sm -mt-1">{{ notification.content }}</p>
+                        <span class="text-xs">{{ formatRelativeDate(notification.created_at) }}</span>
+                    </div>
                 </div>
-            </div>
+            </ng-container>
         </ng-container>
 
     </div>
@@ -49,3 +55,7 @@
             outlined="true"></button>
     </div>
 </div>
+
+<ng-template #singleSkeleton>
+    <p-skeleton width="100%" height="100px"></p-skeleton>
+</ng-template>
