Creation page notifications

--- a/src/app/core/components/notifications-modal/notifications-modal.component.html
+++ b/src/app/core/components/notifications-modal/notifications-modal.component.html
@@ -52,7 +52,7 @@
     <!-- Footer du modal notification -->
     <div class="nt-footer mt-4 mb-3">
         <button style="width: 100%" pButton pRipple class="p-button-outlined" label="Voir toutes les notifications"
-            outlined="true"></button>
+            outlined="true" routerLink="/notifications"></button>
     </div>
 </div>
 
